restyled reroute form - still need to prevent button wrap

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,45 +1,5 @@
 /*custom.css*/
 
-.bannerbubble {
-	opacity: 1;
-	border-radius: 0 1em 1em 0;
-}
-
-#successBubble {
-	/*background: green;*/
-	background: rgba(0, 128, 0, 0.75);
-}
-
-#clarificationBubble {
-	background: orange;
-}
-
-.bubbleIcon {
-	text-align: center;
-}
-
-.iconBanner {
-	color: white;
-}
-
-.textBanner {
-	color: white;
-}
-
-.textBanner p {
-		margin:0 0 0 0;
-		padding:0 0 0 0;
-}
-
-.linkBanner {
-	color: white;
-	border-bottom-style: dotted;
-	border-width: 1px;
-	font-style: italic;
-	font-size: 0.75em;
-}
-
-
 .container {
 	margin-left: 0;
 }
@@ -83,6 +43,22 @@ textarea {
   -moz-border-radius: 0;
   border-radius: 0;
 }
+
+#rerouteForm {
+margin: 0 0 0px;
+}
+
+/*#rerouteEmail {
+display: inline-block;
+}
+
+#rerouteButton {
+display: inline-block;
+}*/
+
+/*.popover {
+   width: 900px !important;
+}*/
 
 /* ----- Sticky Footer ----- by Ryan Fait http://ryanfait.com/ ----- */
 * {
